Adjusted Add route to give more information if no update is available
